reduce the max number of retry when less than expected num of cores are assigned in local-cluster mode simplify CI sh files add jarhell report minor refactoring root pom now use dependenciesManagement to lock-in versions